CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19rc2

	- The static cupsimage library was not built by default.
	- The path for the "ln" command was hardcoded in
	  Makedefs.in instead of being checked at configure time
	  (STR #28).
	- Banner pages containing unescaped { characters would
	  not work.
	- The printer-state-time collection attribute was
	  encoded as an enumeration instead of an integer.
	- The printer-is-accepting-jobs collection attribute was
	  was not added to the collection value.
	- The printer-state-sequence-number collection attribute
	  was not added to the collection value.
	- Fixed typo and const mismatch in IPP backend.
	- Updated the man pages for the new configuration
	  directives.
	- Updated the SAM for MacOS 10.2, the CUPS drivers for
	  windows, the available LPD backend options, and the
	  new configuration directives.
	- The imagetops filter didn't position images properly
	  on the page (STR #18)
	- The configure script didn't add CPPFLAGS to the
	  compiler options or LDFLAGS to the DSO options (STR
	  #13)
	- The scheduler would try to write a debug log message
	  when starting a job that contained a NULL string. 
	  Since not all versions of snprintf() support NULL
	  string pointers this caused some problems (STR #20)
	- The testipp program now supports reading of IPP
	  message files such as those used for the job history
	  in /var/spool/cups.


CHANGES IN CUPS V1.1.19rc1

	- Added CUPS support files for Java, Perl, and PHP
	  (located in the "scripting" subdirectory...)
	- The scheduler now supports fast-reloads of the
	  cupsd.conf file when it is updated via HTTP.
	- The scheduler always changed the ownership of log
	  files; it now only does so if they are not in the /dev
	  directory (i.e. don't want to change the ownership and
	  permissions of /dev/null...)
	- Added libpaper support (patch from Jeff Licquia)
	- Added a new istring() rule for MIME types files that